--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 numpy==1.21.2
 PyYAML==6.0
-scispacy==0.4.0
+transformers==4.11.3
 spacy==3.1.0
+spacy-transformers==1.1.1
+scispacy==0.4.0
 thinc==8.0.10
 typer==0.4.0
 wasabi==0.8.2
