trained models added

--- a/RE/training/model-best/config.cfg
+++ b/RE/training/model-best/config.cfg
@@ -82,6 +82,7 @@ frozen_components = []
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
 before_to_disk = null
+annotating_components = []
 
 [training.batcher]
 @batchers = "spacy.batch_by_words.v1"
