--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-numpy==1.21.2
+numpy==1.19.5
+pandas==1.3.4
 PyYAML==6.0
-transformers==4.11.3
-spacy==3.1.0
-spacy-transformers==1.1.1
-scispacy==0.4.0
-thinc==8.0.10
-typer==0.4.0
+spacy-transformers==1.1.4
+spacy==3.2.1
 wasabi==0.8.2
